--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <meta name="description" content="Build immersive story universes with AI-powered character creation, world building, and blockchain IP minting. Join the future of collaborative storytelling." />
     <meta name="author" content="LoreMint" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <meta name="theme-color" content="#7C3AED" />
+
     <meta property="og:title" content="LoreMint - Web3 Storytelling Platform" />
     <meta property="og:description" content="Create legendary characters and worlds with AI. Mint your IP on the blockchain and collaborate with a community of creators." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@LoreMint" />
+    <meta name="twitter:image" content="/favicon.svg" />
   </head>
 
   <body>
